// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "buyingPower": 0,
      "category": "Consumable",
      "cost": 1,
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
    },
    Object {
      "buyingPower": 0,
      "category": "Consumable",
      "cost": 2,
      "description": "Heal 2, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 2,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id-2",
      "isPlayed": false,
      "name": "Bananas",
    },
  ],
}
`;

exports[`creates a Card 1`] = `
Object {
  "buyingPower": 0,
  "category": "Consumable",
  "cost": 1,
  "description": "Heal 1, Trash this card",
  "effects": Array [
    Object {
      "category": "Heal",
      "kind": "Basic",
      "value": 1,
    },
    Object {
      "category": "Trash Self",
      "kind": "Basic",
      "value": 0,
    },
  ],
  "id": "mock-id",
  "isPlayed": false,
  "name": "Apple",
}
`;

exports[`creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "buyingPower": 0,
      "category": "Consumable",
      "cost": 1,
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
    },
  ],
}
`;

exports[`removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
